Fix Album covers sizes to account for cassetts etc.

--- a/src/Components/AlbumCard/AlbumCard.css
+++ b/src/Components/AlbumCard/AlbumCard.css
@@ -35,8 +35,8 @@
 }
 
 .card_cover {
-  margin-top: 2rem;
-  height: 250px;
+  max-height: 250px;
+  max-width: 250px;
   border: 1px rgb(219, 161, 161)
 }
 
